--- a/frontend/Difucion/pubspec.yaml
+++ b/frontend/Difucion/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
     sdk: flutter
   get: ^4.6.1
   pluto_grid: ^2.9.3
+  hasura_connect: ^4.0.0+2
 
 
   # The following adds the Cupertino Icons font to your application.
