--- a/frontend/Difucion/pubspec.yaml
+++ b/frontend/Difucion/pubspec.yaml
@@ -32,6 +32,11 @@ dependencies:
   get: ^4.6.1
   pluto_grid: ^2.9.3
   hasura_connect: ^4.0.0+2
+  responsive_builder: ^0.4.1
+  responsive_framework: ^0.1.5
+  responsive_grid: ^2.0.0
+  rflutter_alert: ^2.0.4
+  motion_toast: ^2.1.5
 
 
   # The following adds the Cupertino Icons font to your application.
